# gasreceiptautomation

./: .gitignore  README.md  docker-compose-dev.yaml  docker-compose.lubelogger.yml  docker-compose.yaml
client/: .dockerignore  .env.example  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
client.old/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
client.old/src/components/: GasLogForm.tsx
client.old/src/pages/: index.tsx
client/src/components/: GasLogForm.tsx  LoadingScreen.tsx  LoginLanding.tsx
client/src/pages/: _app.tsx  index.tsx
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  authconfig.py  authutils.py  go.mod  go.sum  main.py  openapi.yaml  proc.py  pyproject.toml  requirements-freeze.txt  requirements.txt  testflow.py
server/cmd/server/: main.go
