[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.*",
    "google-genai==1.*",
    "pillow==12.*",
    "pillow-heif==0.22.*",
    "pydantic-settings==2.*",
    "pyjwt[crypto]==2.*",
    "python-dotenv>=1.2.2",
    "pytz==2025.2",
]
